Carousel snap set up

--- a/index.html
+++ b/index.html
@@ -14,10 +14,30 @@
 		
 		<script src="main.js"></script>
 
-		<ul class="carousel">
-			<li class="item">London</li>
-			<li class="item">New York City</li>
-		</ul>
+		<div class="panels">
+
+			<div class="carousel">
+				<div class="item">London</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+				<div class="item">New York City</div>
+			</div>
+
+		</div>
 		
 	</body>
   
