Custom Cursor Created

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<body>
 	
 		<p id="title">City Analysis</br></p>
-		
-		<script src="main.js"></script>
+
+		<div class="custom-pointer" id="custom-pointer"></div>
 
 		<div class="panels">
 
 			<div class="carousel">
-				<div class="item">London</div>
+				<div class="item London">London</div>
 				<div class="item">New York City</div>
 				<div class="item">New York City</div>
 				<div class="item">New York City</div>
@@ -38,6 +38,8 @@
 			</div>
 
 		</div>
+
+		<script src="main.js"></script>
 		
 	</body>
   
