Change color and sizing of main box, along with text

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 	
 	<body>
 	
-		<p id="title">City Analysis</br></p>
+		<p class="title">City Analysis</br></p>
 
 		<div class="custom-pointer" id="custom-pointer"></div>
 
 		<div class="panels">
 
 			<div class="carousel">
-				<div class="item London">London</div>
-				<div class="item">New York City</div>
+				<button class="item London" onclick="window.location.href = './Cities/London/London.html'">London</button>
+				<h1 class="item">New York City</h1>
 				<div class="item">New York City</div>
 				<div class="item">New York City</div>
 				<div class="item">New York City</div>
