Hover animations for front page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<div class="panels">
 
 			<div class="carousel">
-				<button class="item London" onclick="window.location.href = './Cities/London/London.html'">London</button>
+				<button class="item London" onclick="window.location.href = './Cities/London/London.html'">
+					<p class="txt">London</p></button>
 				<h1 class="item">New York City</h1>
 				<div class="item">New York City</div>
 				<div class="item">New York City</div>
