Fixing positioning on London

--- a/Cities/London/London.html
+++ b/Cities/London/London.html
@@ -10,7 +10,7 @@
 	
 	<body>
 	
-		<center><p class="title">London</br></p></center>
+		<center><p class="title" onclick="window.location.href = '../../index.html'">London</br></p></center>
 
 		<div class="custom-pointer" id="custom-pointer"></div>
 
