--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="carousel">
 				<button class="item London" onclick="window.location.href = './Cities/London/London.html'">
 					<p class="txt">London</p></button>
-				<h1 class="item">New York City</h1>
+				<h1 class="item NYC" onclick="window.location.href = './Cities/New York/NewYork.html'">New York City</h1>
 				<div class="item">New York City</div>
 				<div class="item">New York City</div>
 				<div class="item">New York City</div>
