NYC model on build height

--- a/Cities/New York/CityModel/NewYorkModel.html
+++ b/Cities/New York/CityModel/NewYorkModel.html
@@ -20,7 +20,7 @@
 
         <div id="viewDiv"></div>
         <div id="containerDiv">
-            <span id="title" class="esri-widget">Construction Year</span>
+            <span id="title" class="esri-widget">Height of Building</span>
             <div id="slider"></div>
         </div>
 
