--- a/Cities/New York/NewYork.html
+++ b/Cities/New York/NewYork.html
@@ -17,12 +17,12 @@
 		<script src="../../main.js"></script>
 
         <div class="box" onclick="window.location.href = './CityModel/NewYorkModel.html'">
-            <div class="subtitle">Multiple Deprivation in London</div>
-            <div class="desc">Multiple deprivation is used to measure the relative deprivation of small
-                            areas. Deprivation is measured according to many factors, including income, 
-                            employment, education, health, crime, barriers to housing/services, and the
-                            living environment. It is essentially a measure of poverty, where the higher
-                            the number is, the worse off that location would be.<br><br> 
+            <div class="subtitle">Building Heights of NYC</div>
+            <div class="desc">This simply displays the building heights of buildings in NYC
+                            and deepens the color based upon how tall they are. This is a 3d
+                            model of NYC, and upon clicking on each buidling, you can see some
+                            additional data about it. This was completed almost completely based
+                            on ArcGis's data and examples.<br><br> 
             </div>
         </div>
 
