Day time population

--- a/Cities/New York/DayTimePop/NewYorkDTPop.html
+++ b/Cities/New York/DayTimePop/NewYorkDTPop.html
@@ -6,23 +6,19 @@
 
         <meta charset="utf-8" />
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
-        <link rel="stylesheet" href="./NewYorkModel.css" />
-        <title> New York City Building Height </title>
+        <link rel="stylesheet" href="./NewYorkDTPop.css" />
+        <title> New York City Daytime Population </title>
 
         <link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/light/main.css">
         <script src="https://js.arcgis.com/4.23/"></script>
 
-        <script src="NewYorkModel.js"></script>
+        <script src="NewYorkDTPop.js"></script>
 
     </head>
 
     <body>
 
         <div id="viewDiv"></div>
-        <div id="containerDiv">
-            <span id="title" class="esri-widget">Height of Building</span>
-            <div id="slider"></div>
-        </div>
 
     </body>
 
